checkout layout done

--- a/public_html/checkout/index.html
+++ b/public_html/checkout/index.html
@@ -126,5 +126,6 @@
     				</div>
     			</form>
     		</div>
+            <div class="template" include="/templates/footer.html"></div>
     	</body>
     	</html>
