--- a/public_html/cart/index.html
+++ b/public_html/cart/index.html
@@ -55,6 +55,10 @@
 
         <div id="cart-contents"></div>
 
+        <div class="row">
+            <button onclick="window.location.href='/checkout'" >Checkout</button>
+        </div>
+
         <div class="template" include="/templates/footer.html"></div>
 
         <!--<div class="template" include="/templates/footer.html"></div>-->
