--- a/public_html/checkout/index.html
+++ b/public_html/checkout/index.html
@@ -120,9 +120,14 @@
     				</table>
     				<div id="checkout-order-summary">
     					<h2>Order Summary</h2>
+                        Shipping Method<select id="checkout-ship-method" required>
+                            <option value="Standard">Standard</option>
+                            <option value="Priority">Priority</option>
+                        </select>
     					<p>Total Merhandise: <span id="checkout-qty"></span></p>
+                        <p>Shipping: $0.00</p>
     					<p>Price Total: $<span id="checkout-price"></span></p>
-    					<input id="checkout-submit-button" type="submit" onclick="" />
+    					<button id="checkout-submit-button" type="submit" onclick="" >Purchase</button>
     				</div>
     			</form>
     		</div>
