--- a/public_html/men/bottoms/pendleton-transit-utility-pants/index.html
+++ b/public_html/men/bottoms/pendleton-transit-utility-pants/index.html
@@ -29,7 +29,7 @@
                 element.innerHTML = cart.getCount();
             });
 
-            var clothingInfo = getItemInformation("men", "bottoms", "pendleton-cargo-shorts");
+            var clothingInfo = getItemInformation("men", "bottoms", "pendleton-transit-utility-pants");
 
             var finalHTML = displayProduct(clothingInfo);
             document.getElementById("productDisplay").innerHTML = finalHTML;
