--- a/public_html/men/index.html
+++ b/public_html/men/index.html
@@ -52,9 +52,9 @@
             <!-- also remember to change the title to your page -->
             <div class="sidebar">
             
-                <a href="/men"> <h1>Men</h1> </a>
+                <a href="/men"> <h1 style="color: #5E9DC8">Men</h1> </a>
                 <a href="/men/tops">
-                    <h4 style="color: #5E9DC8">Tops</h4> </a>
+                    <h4>Tops</h4> </a>
                 <a href="/men/bottoms">
                     <h4>Bottoms</h4> </a>
             </div>
