--- a/public_html/women/bottoms/level-99-cicerone-shorts/index.html
+++ b/public_html/women/bottoms/level-99-cicerone-shorts/index.html
@@ -29,7 +29,7 @@
                 element.innerHTML = cart.getCount();
             });
 
-            var clothingInfo = getItemInformation("men", "bottoms", "pendleton-cargo-shorts");
+            var clothingInfo = getItemInformation("women", "bottoms", "level-99-cicerone-shorts");
 
             var finalHTML = displayProduct(clothingInfo);
             document.getElementById("productDisplay").innerHTML = finalHTML;
@@ -38,7 +38,7 @@
 
         </script>
 
-        <title>T H O R N E & S P I N D L E | Mens's Bottoms</title>
+        <title>T H O R N E & S P I N D L E | Womens's Bottoms</title>
 
     </head>
     <body onLoad="onLoad()">
