--- a/public_html/women/dresses/index.html
+++ b/public_html/women/dresses/index.html
@@ -46,13 +46,13 @@
         
         <div class="row">
             <div class="sidebar">          
-                <a href="/women"> <h1 style="color: #5E9DC8">Women</h1> </a>
+                <a href="/women"> <h1>Women</h1> </a>
                 <a href="/women/tops">
                     <h4>Tops</h4> </a>
                 <a href="/women/bottoms">
                     <h4>Bottoms</h4> </a>
                 <a href="/women/dresses">
-                    <h4>Dresses</h4> </a>
+                    <h4 style="color: #5E9DC8">Dresses</h4> </a>
             </div>
                 <div id="productList">The product list goes here</div>
             
