added email to checkout and email form validation

--- a/public_html/checkout/index.html
+++ b/public_html/checkout/index.html
@@ -107,6 +107,7 @@
     					</select>	
     					Zip <input id="zipId" type="text" maxlength="5"required /><br />
     					Phone (<input id="phone-area" type="text" value="" maxlength="3" required />) <input id="phone-first3" type="text" value="" maxlength="3" required /> - <input id="phone-last4" type="text" value="" maxlength="4" required /><br />
+                        Email <input id="emailId" type="email" required /><br />
     				</div>
     			</td>
     			<td>
