TS-44 fixed cart in header

--- a/public_html/men/tops/pendleton-fitted-tennyson-shirt/index.html
+++ b/public_html/men/tops/pendleton-fitted-tennyson-shirt/index.html
@@ -26,7 +26,7 @@
             cart.load();
             templates(function() {
                 var element = document.getElementById("cart-qty");
-                element.innerHTML = cart.getCount();
+                element.innerHTML = "(" + cart.getCount() + ")";
             });
 
             var clothingInfo = getItemInformation("men", "tops", "pendleton-fitted-tennyson-shirt");
