--- a/public_html/index.html
+++ b/public_html/index.html
@@ -25,7 +25,7 @@
             cart.load();
             templates(function() {
                 var element = document.getElementById("cart-qty");
-                element.innerHTML = cart.getCount();
+                element.innerHTML = "(" + cart.getCount() + ")";
             });
         }
         </script>
