--- a/public_html/women/index.html
+++ b/public_html/women/index.html
@@ -26,7 +26,7 @@
             cart.load();
             templates(function() {
                 var element = document.getElementById("cart-qty");
-                element.innerHTML = cart.getCount();
+                element.innerHTML = "(" + cart.getCount() + ")";
             });
             var topsList = getCategoryArray("women","tops");
             var bottomsList = getCategoryArray("women", "bottoms");
