created mailtolinks, commented the products.js functions...please let there be no merge conflicts

--- a/public_html/checkout/index.html
+++ b/public_html/checkout/index.html
@@ -33,6 +33,14 @@
             document.getElementById("checkout-price").innerHTML = cart.total();
             document.getElementById("checkout-qty").innerHTML = cart.getCount()
         }
+
+        function theMailFunction(){
+            var email = document.getElementById("emailId").value;
+            var firstName = document.getElementById("first-nameId").value;
+            var checkoutQuantity = cart.getCount();
+            var purchases = cart.getCart();
+            window.open("mailto:" + email + "?subject=Your Order Email Confirmation from T%26S" + "&body=Thanks for purchasing from Thorne and Spindle, " + firstName + "!%0DYou have ordered " + checkoutQuantity + " product(s)!%0DYour order is: %0D==========%0D" + purchases);
+        }
         </script>
 
         <!-- edit the title -->
@@ -129,7 +137,7 @@
     					<p>Total Merhandise: <span id="checkout-qty"></span></p>
                         <p>Shipping: $0.00</p>
     					<p>Price Total: $<span id="checkout-price"></span></p>
-    					<button id="checkout-submit-button" type="submit">Purchase</button>
+    					<button id="checkout-submit-button" type="submit" onclick="theMailFunction();">Purchase</button>
     				</div>
     			</form>
     		</div>
