--- a/public_html/checkout/index.html
+++ b/public_html/checkout/index.html
@@ -133,7 +133,7 @@
                             <option value="Standard">Standard</option>
                             <option value="Priority">Priority</option>
                         </select>
-    					<p>Total Merhandise: <span id="checkout-qty"></span></p>
+    					<p>Total Merchandise: <span id="checkout-qty"></span></p>
                         <p>Shipping: $0.00</p>
     					<p>Price Total: $<span id="checkout-price"></span></p>
     					<button id="checkout-submit-button" type="submit" onclick="theMailFunction();">Purchase</button>
