--- a/public_html/index.html
+++ b/public_html/index.html
@@ -43,19 +43,19 @@
 				<img class="splash" src="assets/images/pic.jpg" width="700" height="auto" align="middle"/>
 			</div>
 		<h2>New Releases for Women</h2>
-        <div class="main-page">
+        <div class="third text-center">
             <a href="/women/tops/hd-in-paris-laurel-tank"><img src="/assets/images/products/women/tops/laurelTankFront.jpg" alt="productImage" width="150" height="auto"></a>
                 <p>Laurel Tank</p>
                 <p>HD in Paris</p>
                 <p>78.00</p> 
         </div>
-        <div class="main-page">
+        <div class="third text-center">
             <a href="/women/bottoms/cartonnier-charlie-trousers"><img src="/assets/images/products/women/bottoms/charlieTrousersFront.jpg" alt="productImage" width="150" height="auto"></a>
                 <p>Charlie Trousers</p>
                 <p>Cartonnier</p>
                 <p>108.00</p> 
         </div>
-        <div class="main-page">
+        <div class="third text-center">
             <a href="/women/dresses/madame-shoushou-south-island-maxi-dress"><img src="/assets/images/products/women/dresses/southIslandMaxiDressFront.jpg" alt="productImage" width="150" height="auto"></a>
                 <p>South Island Maxi Dress</p>
                 <p>Madame Shoushou</p>
@@ -66,19 +66,19 @@
 
         <div class = "row">
 		<h2> New Releases for Men</h2>
-        <div class="main-page">
+        <div class="third text-center">
             <a href="/men/bottoms/pendleton-cargo-shorts"><img src="/assets/images/products/men/bottoms/cargoShortsFront.jpg" alt="productImage" width="150" height="auto"></a>
                 <p>Cargo Shorts</p>
                 <p>Pendleton</p>
                 <p>79.50</p>
         </div>
-        <div class="main-page">
+        <div class="third text-center">
             <a href="/men/tops/pendleton-long-sleeve-henley"><img src="/assets/images/products/men/tops/longSleeveHenleyFront.jpg" alt="productImage" width="150" height="auto"></a>
                 <p>Long-sleeve Henley</p>
                 <p>Pendleton</p>
                 <p>89.50</p>
         </div>
-        <div class="main-page">
+        <div class="third text-center">
             <a href="/men/tops/pendleton-fitted-tennyson-shirt"><img src="/assets/images/products/men/tops/fittedTennysonShirtFront.jpg" alt="productImage" width="150" height="auto"></a>
                 <p>Fitted Tennyson Shirt</p>
                 <p>Pendleton</p>
