--- a/public_html/women/dresses/madame-shoushou-south-island-maxi-dress/index.html
+++ b/public_html/women/dresses/madame-shoushou-south-island-maxi-dress/index.html
@@ -27,7 +27,7 @@
             cart.load();
             templates(function() {
                 var element = document.getElementById("cart-qty");
-                element.innerHTML = cart.getCount();
+                element.innerHTML = "(" + cart.getCount() + ")";
             });
 
             var clothingInfo = getItemInformation("women", "dresses", "madame-shoushou-south-island-maxi-dress");
