added so that html errors would be visible

--- a/public_html/checkout/index.html
+++ b/public_html/checkout/index.html
@@ -127,6 +127,8 @@
     				</div>
     				<td>
     				</table>
+
+                    <div id="errors"></div>
     				<div id="checkout-order-summary">
     					<h2>Order Summary</h2>
                         Shipping Method<select id="checkout-ship-method" required>
@@ -136,7 +138,7 @@
     					<p>Total Merchandise: <span id="checkout-qty"></span></p>
                         <p>Shipping: $0.00</p>
     					<p>Price Total: $<span id="checkout-price"></span></p>
-    					<button id="checkout-submit-button" type="submit" onclick="formvalidation(theMailFunction);">Purchase</button>
+    					<button id="checkout-submit-button" type="submit" onclick="formValidation(theMailFunction);">Purchase</button>
     				</div>
     			</form>
     		</div>
