Added styling and bigger button for purchase and checkout

--- a/public_html/cart/index.html
+++ b/public_html/cart/index.html
@@ -51,7 +51,7 @@
         <div id="cart-contents"></div>
 
         <div class="row">
-            <button id="checkout-button" onclick="window.location.href='/checkout'" >Checkout</button>
+            <button class="big-btn" id="checkout-button" onclick="window.location.href='/checkout'" >Checkout</button>
         </div>
 
         <div class="template" include="/templates/footer.html"></div>
