--- a/public_html/checkout/index.html
+++ b/public_html/checkout/index.html
@@ -138,7 +138,7 @@
     					<p>Total Merchandise: <span id="checkout-qty"></span></p>
                         <p>Shipping: $0.00</p>
     					<p>Price Total: $<span id="checkout-price"></span></p>
-    					<button id="checkout-submit-button" type="submit" onclick="formValidation(theMailFunction);">Purchase</button>
+    					<button id="checkout-submit-button" type="submit" class="big-btn" onclick="formValidation(theMailFunction);">Purchase</button>
     				</div>
     			</form>
     		</div>
