Added free shipping

--- a/public_html/checkout/index.html
+++ b/public_html/checkout/index.html
@@ -143,8 +143,8 @@
     				<div id="checkout-order-summary">
     					<h2>Order Summary</h2>
                         Shipping Method<select id="checkout-ship-method" required>
-                            <option value="Standard">Standard</option>
-                            <option value="Priority">Priority</option>
+                            <option value="Standard">Standard . . . Free</option>
+                            <option value="Priority">Priority . . . Free</option>
                         </select>
     					<p>Total Merchandise: <span id="checkout-qty"></span></p>
                         <p>Shipping: $0.00</p>
