fixed typos on womens home page and products.js

--- a/public_html/checkout/index.html
+++ b/public_html/checkout/index.html
@@ -9,7 +9,7 @@
 	<script src="/assets/js/templates.js"></script>
 	<script src="/assets/js/cart.js"></script>
 	<script src="/assets/js/formvalidation.js"></script>
-	<script src="/assets/js/products.json"></script>
+	<script src="/assets/js/products.js"></script>
 	<script>
         /**
          * cart object, initalized as an empty object
