--- a/public_html/women/bottoms/index.html
+++ b/public_html/women/bottoms/index.html
@@ -38,7 +38,7 @@
 
         </script>
 
-        <title>T H O R N E & S P I N D L E | Mens's Bottoms</title>
+        <title>T H O R N E & S P I N D L E | Womens's Bottoms</title>
 
     </head>
     <body onLoad="onLoad()">
